--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,16 @@
 
   .header {
-    width: 100px;
-    height: 30px;
-    margin: 41px auto;
-    position: relative;
+    width: 100%;
+    height: 116px;
+    /* margin: 41px auto; */
     z-index: 50;
+    left: 0;
+  }
+
+  .header__logo_pic {
+    margin: auto;
+    display: block;
+    position: fixed;
+    top:45px;
+    z-index: 250;
   }
