--- a/src/components/CostumesPage/SlotMaker/SlotMaker.css
+++ b/src/components/CostumesPage/SlotMaker/SlotMaker.css
@@ -23,7 +23,9 @@
 .imgBlockRight {
     display: inline-block;
     width: 60%;
-    transition: ease-in all 2s;
+    transition: ease-in all 1s;
+    right: 0;
+
     
 }
 .imgBlockLeft {
@@ -31,7 +33,8 @@
     width: 60%;
     position: relative;
     left: -11%;
-    transition: ease-in all 2s;
+    transition: ease-in all 1s;
+
     
 }
 
@@ -87,6 +90,7 @@
     height: 100%;
     top: 50px;
     right: -15%;
+    
 }
 
 .chosenTextBlockLeft {
@@ -97,6 +101,7 @@
     width: 30%;
     padding-left: 10%;
     margin-top: 65%;
+    
     /* position: absolute; */
 }
 .chosenTextBlockRight {
@@ -107,6 +112,7 @@
     width: 30%;
     padding-left: 60%;
     margin-top: 65%;
+
     /* position: absolute; */
 }
 
