--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 
   .header {
     width: 100%;
-    height: 116px;
+    height: 90px;
     /* margin: 41px auto; */
     z-index: 50;
     left: 0;
@@ -13,4 +13,10 @@
     position: fixed;
     top:45px;
     z-index: 250;
+  }
+
+  @media (min-height: 590px) {
+    .header {
+      height: 116px;
+    }
   }
