--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@ body {
 #root {
   max-width: 425px;
   max-height: 823px;
+  min-width: 300px;
+  min-height: 550px;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
   background-size: cover;
 }
