--- a/src/components/CostumesPage/SlotMaker/ChosenSlotBuyingPage.css
+++ b/src/components/CostumesPage/SlotMaker/ChosenSlotBuyingPage.css
@@ -5,9 +5,6 @@
     font-weight: normal;
 }
 
-.chosenSlotBuyingPageTitle {
-   
-}
 .chosenSlotBuyingPageTitleFirstString {
     line-height: 45px;
     color: #3F3F3F;
@@ -42,7 +39,16 @@
     line-height: 14px;
     color: #6F6F6F;
     opacity: 0.5;
+    letter-spacing: 0.115em;
     
+}
+
+.active {
+    color: #FF588B;
+    text-decoration-line: underline;
+}
+.activeSize{
+    color: #FF588B;
 }
 
 .rowOfSizeSettings{
@@ -87,16 +93,12 @@
     white-space: nowrap;
 }
 
-.rowOfColorSettingsTitleEachArrow{
-}
+
 .rowOfColorSettingsTogglerText{
     margin: 0 5%;
     
 }
 
-.rowOfAmountSettings{
-    
-}
 .rowOfAmountSettingsTitle{
     font-size: 16px;
     line-height: 18px;
