--- a/src/components/CostumesPage/CostumesPageForHer/CostumesPageForHer.css
+++ b/src/components/CostumesPage/CostumesPageForHer/CostumesPageForHer.css
@@ -5,6 +5,7 @@
     background: linear-gradient(180deg, #DBDFDF 0%, rgba(196, 196, 196, 0) 100%);
     height: 116px;
     z-index: 200;
+    width: 100%
 }
 
 .headerElementArrowBach {
