--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
+html {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
-
+  width: 100%;
+  height: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -8,13 +14,20 @@ body {
 
 
 #root {
-  max-width: 425px;
-  max-height: 823px;
-  min-width: 300px;
-  min-height: 550px;
-  width: 100%;
-  height: 100%;
+  width: 550px;
+  height: 900px;
   margin: 0 auto;
   background-size: cover;
+}
+
+@media (max-width: 500px){
+  #root {
+    width: 100%
+  }
+}
+@media (max-height: 900px){
+  #root {
+    height: 100%
+  }
 }
 
