--- a/src/components/CostumesPage/SlotMaker/SlotMaker.css
+++ b/src/components/CostumesPage/SlotMaker/SlotMaker.css
@@ -77,6 +77,12 @@
     letter-spacing: 0.23em;
     color: #FFFFFF;
     text-align: center;
+    cursor: pointer;
+}
+
+.wantButton:hover:active {
+    background: lightblue;
+    color: lightcoral
 }
 
 .addToFavoriteButtonText {
